--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   # 容器名称
   webgallery:    
     container_name: webgallery
-    image: webgallery
+    image: ghcr.io/xiphoray/webgallery
     # -----------------------------------------------------------
     # 核心配置项 (通过环境变量或 .env 文件传入)
     # -----------------------------------------------------------
@@ -25,9 +25,9 @@ services:
     # 使用 ${HOST_FRONTEND_PORT} 和 ${HOST_BACKEND_PORT} 允许动态配置宿主机端口
     ports:
       # 前端访问端口: 宿主机:${HOST_FRONTEND_PORT} -> 容器:5173
-      - "3574:3574"
+      - "${HOST_FRONTEND_PORT}:3574"
       # 后端 API 端口: 宿主机:${HOST_BACKEND_PORT} -> 容器:3000
-      - "3573:3573"
+      - "${HOST_BACKEND_PORT}:3573"
 
     # -----------------------------------------------------------
     # 卷映射：图片源路径
@@ -35,4 +35,4 @@ services:
     # 宿主机图片路径 -> 容器内部的 /app/data/images
     # 使用 ${IMAGE_SOURCE_PATH} 变量来指定宿主机的图片路径
     volumes:
-      - "/c/这个世界:/app/data/images"
+      - "${IMAGE_SOURCE_PATH}:/app/data/images"
