--- a/album-frontend/public/manifest.json
+++ b/album-frontend/public/manifest.json
@@ -7,13 +7,8 @@
   "theme_color": "#4f46e5",
   "icons": [
     {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
+      "src": "icon.png",
+      "sizes": "144x144",
       "type": "image/png"
     }
   ]
