--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,16 +1,24 @@
 name: Docker
 
+# This workflow uses actions that are not certified by GitHub.
+# They are provided by a third-party and are governed by
+# separate terms of service, privacy policy, and support
+# documentation.
+
 on:
   schedule:
     - cron: '21 14 * * *'
   push:
     branches: [ "main" ]
+    # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
   pull_request:
     branches: [ "main" ]
 
 env:
+  # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
+  # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
@@ -19,22 +27,19 @@ jobs:
     permissions:
       contents: read
       packages: write
-      # id-token: write # 如果不使用 cosign 签名，通常不需要这个权限，除非你有其他用途
+      # id-token: write # 已移除：因为删除了 cosign 签名步骤，不再需要此权限
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # --- 1. 删除或注释掉 Cosign 安装步骤 ---
-      # - name: Install cosign
-      #   if: github.event_name != 'pull_request'
-      #   uses: sigstore/cosign-installer@v3.5.0
-      #   with:
-      #     cosign-release: 'v2.2.4'
+      # --- 修改点 1：删除了 Install cosign 步骤 ---
 
+      # Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
 
+      # Log into registry except on PR
       - name: Log into registry ${{ env.REGISTRY }}
         if: github.event_name != 'pull_request'
         uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
@@ -43,12 +48,21 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      # Extract metadata (tags, labels) for Docker
       - name: Extract Docker metadata
         id: meta
         uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          # --- 修改点 2：增加了 latest 标签规则 ---
+          tags: |
+            type=ref,event=branch
+            type=ref,event=tag
+            type=ref,event=pr
+            # 如果是默认分支(main)，额外生成 :latest 标签
+            type=raw,value=latest,enable={{is_default_branch}}
 
+      # Build and push Docker image with Buildx (don't push on PR)
       - name: Build and push Docker image
         id: build-and-push
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
@@ -59,13 +73,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          # --- 2. 关键修改：添加下面这行来关闭来源证明 ---
+          # --- 修改点 3：关闭来源证明，防止生成 unknown artifacts ---
           provenance: false
 
-      # --- 3. 删除或注释掉签名步骤 ---
-      # - name: Sign the published Docker image
-      #   if: ${{ github.event_name != 'pull_request' }}
-      #   env:
-      #     TAGS: ${{ steps.meta.outputs.tags }}
-      #     DIGEST: ${{ steps.build-and-push.outputs.digest }}
-      #   run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
+      # --- 修改点 4：删除了 Sign the published Docker image 步骤 ---
