--- a/album-frontend/public/manifest.json
+++ b/album-frontend/public/manifest.json
@@ -2,7 +2,8 @@
   "name": "Web Gallery",
   "short_name": "Gallery",
   "start_url": ".",
-  "display": "standalone",
+  "display": "fullscreen",
+  "display_override": ["fullscreen", "standalone", "window-controls-overlay"],
   "background_color": "#ffffff",
   "theme_color": "#4f46e5",
   "icons": [
